syntax = "proto3";
package twoferrpc;

service Webauthn {
    rpc BeginRegister (BeginRegisterRequest) returns (BeginRegisterResponse) {
    };
    rpc FinishRegister (FinishRegisterRequest) returns (FinishRegisterResponse) {
    };
    rpc BeginLogin (BeginLoginRequest) returns (BeginLoginResponse) {
    };
    rpc FinishLogin (FinishLoginRequest) returns (FinishLoginResponse) {
    };
}

message BeginRegisterRequest {
    string userId = 1;
    bytes userBlob = 2;
}

message BeginRegisterResponse {
    bytes session = 1;
    bytes response2User = 2;
}


message FinishRegisterRequest {
    bytes userBlob = 1;
    bytes session = 2;
    bytes userSignature = 3;
}
message FinishRegisterResponse {
    bytes userBlob = 1;
}


message BeginLoginRequest {
    bytes userBlob = 1;
}
message BeginLoginResponse {
    bytes session = 1;
    bytes response2User = 2;
}



message FinishLoginRequest {
    bytes session = 1;
    bytes userBlob = 2;
    bytes userSignature = 3;
}
message FinishLoginResponse {
    bytes userBlob = 1;
}



